--- a/client/assets/main.scss
+++ b/client/assets/main.scss
@@ -9,6 +9,19 @@ $C_black: #222B2D;
 $C_lightGray: #F4F4F4;
 $C_blue: #3b85bf;
 
+/* Breakpoint mixins */
+@mixin atSmallUp {
+  @media (min-width: 600px) { @content; }
+}
+@mixin atMediumUp {
+  @media (min-width: 900px) { @content; }
+}
+@mixin atLargeUp {
+  @media (min-width: 1200px) { @content; }
+}
+@mixin atExtraLargeUp {
+  @media (min-width: 1800px) { @content; }
+}
 /* Google fonts */
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,500,600,700');
 
